--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@
 #   - title: "Blog Posts"
 #     url: /year-archive/
     
-#   - title: "CV"
-#     url: /cv/
+   - title: "CV"
+     url: http://charupriyasharma.github.io/files/paper1.pdf
     
 #   - title: "Guide"
 #     url: /markdown/
