--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,6 @@
 #     url: /year-archive/
     
    - title: "CV"
-     url: http://charupriyasharma.github.io/files/paper1.pdf
-    
+     url: /cv/    
 #   - title: "Guide"
 #     url: /markdown/
