--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "www.linkedin.com/in/charupriya-sharma"
+  linkedin         : "charupriya-sharma"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
