--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@
 #   - title: "Blog Posts"
 #     url: /year-archive/
     
-#   - title: "CV"
-#     url: /cv/    
+   - title: "CV"
+     url: https://charupriyasharma.github.io/files/r_sum_.pdf   
 #   - title: "Guide"
 #     url: /markdown/
