--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,6 @@
 #     url: /year-archive/
     
    - title: "CV"
-     url: https://charupriyasharma.github.io/files/r_sum_.pdf   
+     url: https://charupriyasharma.github.io/files/Charupriya_Sharma_resume.pdf   
 #   - title: "Guide"
 #     url: /markdown/
